# nexran

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/modules/: buildinfo.cmake
cmake/tools/: download_kpm_bindings.sh
etc/: config-file.json  nexran-config-file.json  northbound-openapi.json  routes.txt
include/: config.h  nexran.h  restserver.h  version.h
lib/e2ap/: CMakeLists.txt
lib/e2ap/include/: e2ap.h
lib/e2ap/messages/: e2ap-v02.03.asn1
lib/e2ap/src/: e2ap.cc
lib/e2sm/: CMakeLists.txt
lib/e2sm/include/: e2sm.h  e2sm_internal.h  e2sm_kpm.h  e2sm_nexran.h  e2sm_zylinium.h
lib/e2sm/messages/: e2sm-nexran-v01.00.asn1  e2sm-zylinium-v01.00.asn1  nexran-v01.00.asn1
lib/e2sm/src/: e2sm.cc  e2sm_kpm.cc  e2sm_nexran.cc  e2sm_zylinium.cc
src/: CMakeLists.txt  app_config.cc  config.cc  main.cc  nexran.cc  nodeb.cc  policy.cc  restserver.cc  slice.cc  ue.cc
